Wed Oct 27 01:20:45 2004   Oystein Johansen <oystein@gnubg.org>

	* gtktheory.c gtktempmap.c: Two files I missed in the last commit.

Tue Oct 26 21:00:45 2004   Oystein Johansen <oystein@gnubg.org>

	Hate me or love me! I've commited the code that removes the reduced
	searches. (Sorry Nis! Hope it won't cause you any trouble). Hopefully
	I will be able to combine the two reduction methods later.

	* gtkgame.c, eval.c and other files: Add user interface to prune nets

Fri Oct 22 15:56:45 2004 GMT  Jon Kinsey <Jon_Kinsey@hotmail.com>

	* html.c, and others : Fix exports to display cube analysis whenever
	analysis available

Thu Oct 21 15:56:45 2004 GMT  Jon Kinsey <Jon_Kinsey@hotmail.com>

	* matchequity.c, set.c : Bug fix while inverting met

Tue Oct 19 17:56:45 2004 GMT  Jon Kinsey <Jon_Kinsey@hotmail.com>

	* gtkprefs.c : Fixes for import/export appearance designs

Sun Oct 17 22:14:00 2004 UTC Jim Segrave <jes@jes-2.demon.nl>

	* Makefile.in - missing gtkpanels.*
	* sgf.c - versioning for pruning
	* gnubg.c - move reduction variables inside ifdef
	* eval.c - cosmetic fix for compiler warnings
	* xpm/x.xpm - missing final line of bmp
	* eval.h - add version numbers for pruning in .sgf files
	
Sat Oct 16 23:36:45 2004  Oystein Johansen <oystein@gnubg.org>

	* gnubgmodule.c: Fix dice option handling

Thu Oct 14 17:56:45 2004 GMT  Jon Kinsey <Jon_Kinsey@hotmail.com>

	* gnubg.c, gtkgame.c : Remember last import+export file type

Thu Oct 14 12:56:45 2004 GMT  Jon Kinsey <Jon_Kinsey@hotmail.com>

	* eval.c : Minor (non gcc) compiler fixes

Tue Oct 12 19:44:00 2004  Oystein Johansen  <oystein@gnubg.org>

	* gnubgmodule.c: Add methods for FindBestMove and EvaluateCubeful

Tue Oct 12 21:36:00 2004  Joseph Heled  <joseph@gnubg.org>

	* eval.c (FindBestMoveInEval): Add usage of prunning nets. This is
	quite a large change, and since it adds a member to evalcontext,
	possibly a destructive one.

Sun Oct 10 23:04:14 GMT 2004 Jon Nall <backgame@gmail.com>
